# nova

./: .gitignore  BUILDING.md  Cargo.toml  README.md  bun.lockb  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
desktop/: README.md  bun.lockb  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: cmd.rs  main.rs  setup.rs
desktop/src/components/: DownloadItem.tsx
desktop/src/providers/: ErrorModal.tsx  Updater.tsx
landing/: svelte.config.js
scripts/: landing_links.js  pre_build.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/en-US/: common.json
src-tauri/src/: cmd.rs  config.rs  main.rs
src/components/: DownloadItem.tsx  Format.tsx  UpdaterProgress.tsx
src/lib/: i18n.ts  utils.ts
src/pages/: Home.tsx
