[package]
name = "nova"
version = "0.0.1"
description = "Download any video or audio easily"
authors = ["thewh1teagle"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
fs_extra = "1.3.0"

[dependencies]
tauri = { version = "2.0.0-beta", features = ["devtools"] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.21"
env_logger = { version = "0.11.3", features = ["color"] }
rand = "0.8.5"
